@startuml

entity User {
    id: int
    provider_id: int
    name: string
    email: string
}

entity Team {
    + id: int
    + name: string
    + color: string
    + icon: string
}

entity Vendor {
    + id: int
    + number: string
    + number_sort: integer
    + name: string
    + team_id: number
}

entity UserTeams {
    + id: int
    + user_id: int
    + team_id: int
}

entity Thread {
    + id: int
    + vendor_id: int
    + user_id: int
    + team_id: int
    + assigned_team_id: nullable int
    + assigned_user_id: nullable int
    + subject: string
    + read: boolean
    + created_at: datetime
    + updated_at: datetime
    + resolved_at: datetime
}

entity ThreadUpdate {
    + id: int
    + thread_id: int
    + user_id: int
    + team_id: int
    + type: varchar(30)
    + data: json
    + created_at: datetime
}

entity ThreadTeam {
    + id: int
    + thread_id: int
    + team_id: int
}

User "0..*"--"0..*" Team
(User, Team) .. UserTeams

Vendor - Team : "Onderdeel\nvan"
Thread - Vendor : "Gaat\nover"

Thread "0..*"--"0..*" Team : "Betrokken\nbij"
(Thread,Team) .. ThreadTeam

Thread "1"--"1" Team : "Eigenaar\nvan"
Thread "1"--"1" User : "Eigenaar\nvan"

Thread "0..*"--"0..1" Team : "Toegewezen\naan"
Thread "0..*"--"0..1" User : "Toegewezen\naan"

ThreadUpdate "0..*"--"1" Thread : Heeft
ThreadUpdate "0..*"-"1" User : "Eigenaar\nvan"
ThreadUpdate "0..*"-"1" Team : "Eigenaar\nvan"

note right of User
    Gebruikers van de applicatie.
end note

note right of Team
    Vangt gebruikers samen onder één team.
    Dit zijn wijken, maar soms ook teams als CP en Gator.
end note

note right of UserTeams
    Gebruikers kunnen lid zijn van een of meer teams,
    dus many-to-many.
end note

note right of Thread
    Een thread, wat voorheen een Ticket was.
end note

note right of ThreadUpdate
    Een update, dit kan een bericht zijn of een wijziging
    (assignment naar een team of gebruiker, en status verandering)
end note

note right of ThreadTeam
    We houden bij welk team interactie heeft gehad met Threads,
    zodat we dit niet hoeven te querien uit de ThreadUpdate tabel.
    Many-to-many, maar unique-constraint op team_id-thread_id
end note

@enduml
